# bim

./: .build.yml  .clang-format  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .projectile  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml  build.rs  default.nix  kilo.c  rustfmt.toml  todo.org  win_size.c
.github/workflows/: pre-commit.yml  rust.yml  windows.yml
.travis/: install.sh  test.sh
examples/: echo_key.rs  window_size.rs
kilo/: Makefile
scripts/: graphical-run-split.sh  prepare_ci.sh  profile.sh  terminal-run-split.sh
src/: action.rs  buffer.rs  build.bat  colours.rs  commands.rs  config.rs  container.rs  cursor.rs  debug_log.rs  editor.rs  highlight.rs  input.rs  keycodes.rs  keymap.rs  lib.rs  main.cpp  main.rs  mouse.rs  options.rs  pane.rs  prompt.rs  rect.rs  row.rs  search.rs  status.rs  status_line.rs  syntax.rs  terminal.rs  unix.rs  utils.rs  win.rs  xbim.rs
src/gui/: actions.rs  animation.rs  container.rs  draw_quad.rs  draw_state.rs  gfx_ui.rs  gl_renderer.rs  gui_container.rs  gui_pane.rs  keycode_to_char.rs  mod.rs  mouse.rs  pane.rs  persist_window_state.rs  quad.rs  rect.rs  transforms.rs  window.rs
src/gui/shaders/: quad_150_core.frag  quad_150_core.vert
src/shaders/: quad_150_core.vert
src/terminal/: buffer.rs  mod.rs  row.rs  window.rs
testfiles/: kilo-dos.c  kilo-dos2.c  kilo-unix.c  kilo-unix2.c  multilinecomment-dos.c  test-utf8-dos.txt  test.rb  with-tabs-dos.txt
tests/: window_dimensions.bats
