[package]
name = "bim"
version = "0.0.1"
edition = "2018"
authors = ["William Roe <git@wjlr.org.uk>"]

[dependencies]
libc = "0.2.42"
time = "0.1.40"
lazy_static = "1.0.2"
gfx_glyph = "0.13.1"
gfx = "0.17.1"
gfx_device_gl = "0.15.5"
gfx_gl = "0.5.0"
gfx_window_glutin = "0.28.0"
glutin = { version = "0.19.0", features = ["serde"] }
cgmath = "0.17.0"
rand = "0.6.4"
simple-error = "0.1.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[target.'cfg(unix)'.dependencies]
errno = "0.2.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = [
  "winbase",
  "consoleapi",
  "shellapi",
  "processenv",
  "synchapi"
] }

[[bin]]
name = "bim"
doctest = false
doc = false

[[bin]]
name = "xbim"
path = "src/xbim.rs"
doctest = false
doc = false
