[package]
name = "bim"
version = "0.0.1"
edition = "2018"
authors = ["William Roe <git@wjlr.org.uk>"]
build = "build.rs"

[package.metadata.winres]
ProductName = "bim"

[dependencies]
libc = "0.2"
time = "0.1.40"
lazy_static = "1.3"
gfx_glyph = "0.15"
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_gl = "0.6.0"
gfx_window_glutin = "0.31"
glutin = { version = "0.21", features = ["serde", "icon_loading"] }
cgmath = "0.17.0"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
flame = "0.2"

[target.'cfg(unix)'.dependencies]
errno = "0.2.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = [
  "winbase",
  "consoleapi",
  "shellapi",
  "processenv",
  "synchapi"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "bim"
doctest = false
doc = false

[profile.release]
debug = false
lto = true
